# beer_distribution_RL

./: .gitignore  CURRENT_STATE.md  DECISIONS.md  LEDGER.md  LICENSE  Makefile  PROJECT_SPEC.md  README.md  pyproject.toml
analysis/: BUGHUNT.md  DIAGNOSTICS.md  __init__.py
analysis/diag/: __init__.py  bughunt_b1.py  common.py  d1_channel_gap.py  d2_signal_ablation.py  d3_listener_sensitivity.py  d4_sharing_preference.py  d5_rationing_bind.py  d6_demand_info.py  eval_ablation.py  eval_matched_deterministic.py  honesty_weighted_recheck.py  recurrent_baseline.py  run_all.py  shortage_gaming.py  v11_signal_content.py
artifacts/diagnostics/: eval_mode_blast_radius.md  honesty_weighted_recheck.md  llm_rolling_context.json  llm_rolling_context.md  llm_text_io.md  llm_text_io_smoke.json  llm_tier_readiness.md  llm_tier_readiness_v2.md  llm_tier_smoke.json  recurrent_baseline.md  shortage_gaming.md  v11_ablation.md  v11_bprime.md  (+1 more)
beer_distribution_rl/: __init__.py
docs/: DIFFICULTY_LADDER.md  ENVIRONMENT_SPEC.md  LLM_RL_RUNBOOK.md  REWARD_SPEC.md  WHOLESALER_Y_VARIANT.md
environments/beer_distribution_game/: README.md  eval.toml  eval_akash_dev.toml  eval_akash_retailer_smoke.toml  eval_akash_wholesaler_y_deepseek_validation.toml  eval_akash_wholesaler_y_dev.toml  eval_akash_wholesaler_y_qwen_dev.toml  eval_akash_wholesaler_y_qwen_repeat.toml  eval_akash_wholesaler_y_qwen_validation.toml  eval_akash_wholesaler_y_smoke.toml  pyproject.toml
environments/beer_distribution_game/beer_distribution_game/: __init__.py  core.py  episode.py  grading.py  harness.py  policies.py  program.py  scenario.py  taskset.py
experiments/: regime_a_classic.yaml  regime_b_matrix_template.yaml  regime_c_classic.yaml  tier1_v11_template.yaml
notebooks/: colab_llm_grpo_wholesaler.ipynb  colab_llm_grpo_wholesaler_fixed.ipynb  colab_llm_smoke.ipynb  colab_tier1.ipynb
scripts/: eval_hub_baselines.py  eval_ippo.py  make_phase_diagram.py  probe_akash_tools.py  run_llm_episode.py  run_m3_matrix.py  run_tier1_matrix.py  serve_spectator.py  summarize_hub_eval.py  train_colab_grpo_wholesaler.py  train_ippo.py  validation_gate.py
tests/: golden_trajectory.json  test_baselines.py  test_core.py  test_demand.py  test_ippo.py  test_llm_rolling_context.py  test_llm_text_io.py  test_perf.py  test_rationing.py  test_rewards.py  test_signals.py  test_tier1_matrix.py  test_wrappers.py  test_y_topology.py
(+3630 files in other folders)
