[project]
name = "beer-distribution-game"
version = "0.2.0"
description = "Reproducible delayed supply-chain control tasks for LLM agents."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Consti Ertel" }]
dependencies = ["verifiers==0.2.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["beer_distribution_game"]

[tool.verifiers.eval]
num_tasks = 5
num_rollouts = 1
max_concurrent = 5
